Fix build errors: update configs and dependencies for production deployment

--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "sonner": "^2.0.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@next/bundle-analyzer": "^16.1.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "critters": "^0.0.25",
     "eslint": "^9",
     "eslint-config-next": "^15.1.6",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.53.0"
   }
 }
