--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "framer-motion": "^12.26.1",
     "next": "^15.1.6",
     "react": "^18.3.1",
