--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@vercel/speed-insights": "^1.3.1",
     "framer-motion": "^12.26.1",
+    "gray-matter": "^4.0.3",
     "next": "^15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "resend": "^6.7.0",
     "sonner": "^2.0.7"
   },
